Fix form inputs with webkit appearance on iPhone

--- a/assets/src/site/scss/_site-forms.scss
+++ b/assets/src/site/scss/_site-forms.scss
@@ -23,6 +23,7 @@ textarea {
 
 button,
 input {
+	-webkit-appearance: none;
 	height: 1.75rem;
 	line-height: 1;
 }
